# holoscope

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  config.toml.example  pyproject.toml  requirements.txt  run.py  set_thumbnail_cache2dynamodb.py  set_token2dynamodb.py  thumbnail_cache.toml  tox.ini
holoscope/: config.py  core.py  datamodel.py  errors.py  thumbnail_cache_manager.py  token_manager.py  utils.py
holoscope/exporter_plugin/: google_calendar.py
holoscope/importer_plugin/: config.py  holodule.py
terraform/dynamodb/: main.tf
terraform/lambda/: build_lambda.sh  main.tf
